# Dose2Sino_v2

./: CLAUDE.md  EXPERIMENTS.md  README.md  analyze_angular_fft.py  analyze_dose_operator_fidelity.py  analyze_pareto_degeneracy.py  ccc_blur_test.py  ccc_kernel_test.py  ccc_sharpen.py  check_dose_ct_registration.py  check_ptv_concordance.py  diagnose_value_calibration.py  dose_space_eval.py  exp_base32.py  exp_base48.py  exp_dmax.py  exp_dose.py  exp_fourier.py  exp_hw128.py  generate_cache.py  generate_rtplan.py  generate_rtplan_attention_in_agg.py  inspect_repair_rtplan_closed_rows.py  inspect_rtplan_technical_diff.py  inspect_tomo_dataset.py  main.py  main_2p5d.py  main_attention_in_agg_full.py  patch.py  plot_sanity_existing_metrics_boxplots.py  plot_sinogram_distribution.py  prototype_dose_accumulate.py  prototype_dose_forward.py  pyproject.toml  sanity_overfit.py  sanity_overfit_same_patient_attention_in_agg.py  sanity_overfit_same_patient_attention_in_agg_tunable.py  streamlit_ct_rtdose_viewer.py  streamlit_sanity_viewer.py  streamlit_sino_viewer_residual.py  (+15 more)
configs/: sanity_baseline_tuning.yaml
models/: sino_patchgan_discriminator.py  sino_residual_refiner.py  sinogram_2p5d.py  unet.py  unet_attention.py  unet_attention_coord_twohead.py  unet_attention_in_agg.py
utils/: __init__.py  atomic_write.py  augmentation.py  channel_order_utils.py  config.py  dicom_utils.py  dose_operator.py  file_lock.py  geometry_utils.py  io_utils.py  json_utils.py  losses.py  mask_utils.py  patient.py  patient_sentinel.py  preprocessing_utils.py  ptv_utils.py  quarantine_utils.py  (+5 more)
